22 March 2015, version 1.0.9:
    * When the problem fails with error status 6 (NLOPT_MAXTIME_REACHED) and maxtime was not set to a positive number in the options, then nloptr tries a couple more times to solve the problem. This is a new approach that should solve the bug that NLopt sometimes exits a problem stating the maximum available time has been reached, even when no limit on the time has been set.
    * Changed warning to message in order to show that for consistency with the rest of the package the inequality sign in the functions auglag, cobyla, isres, mma, and slsqp will be switched from >= to <= in a future nloptr version.

22 February 2015, version 1.0.8:
    * Changed description in DESCRIPTION such that it does not start with the package name (as requested by CRAN).

14 February 2015, version 1.0.7:
    * Changed title field in DESCRIPTION to title case (as requested by CRAN).
    * Added donttest around example in mma documentation.

8 February 2015, version 1.0.6:
    * Updated description to better reflect installation procedure on Linux when NLopt is pre-installed (as requested by CRAN).

28 January 2015, version 1.0.5:
    * Added non-exported functions CFlags and LdFlags to be used in packages that want to link to the NLopt C library.
    * For consistency with the rest of the package the inequality sign in the functions auglag, cobyla, isres, mma, and slsqp will be switched from >= to <= in the next nloptr version. The current version of nloptr shows a warning when using these functions with inequality constraints. This warning can be turned off with options('nloptr.show.inequality.warning' = FALSE).

02 August 2014, version 1.0.4:
    * Increased version number to re-submit package to CRAN with CRLF line endings removed for configure and configure.ac.

25 July 2014, version 1.0.3:
    * Changed NLOPT_VERSION to 2.4.2 for Linux.
    * Changed nloptr.default.options from a data.frame to a function returning the data.frame.
